Bugfix: Multiple streams sync with viseme data Bugfix: Disconnect local pipe when browser window/tab closed Added Installation at README

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
                         <fieldset>
                             <legend>Server</legend>
                             <label for="w_name1">Client Name</label>
-                            <input id="w_name1" name="w_name1" type="input" style="font-size: 1.2em;"/>
+                            <input id="w_name1" name="w_name1" type="input" placeholder="Input name here" style="font-size: 1.2em;"/>
                             <label for="w_gender1">Gender</label>
                             <select id="w_gender1" name="w_gender1">
                                 <option value="Female">Female</option>
